# Sound_Competition

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy-pages.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py  worker.py
backend/app/api/v1/: auth.py  feed.py  matches.py  router.py  social.py  tournaments.py  tracks.py  users.py
backend/app/core/: cloudinary_client.py  fingerprint.py  security.py  swiss.py
backend/app/db/: base.py  seed.py
backend/app/db/models/: __init__.py  fingerprint.py  match.py  social.py  tournament.py  track.py  user.py
backend/app/schemas/: __init__.py  auth.py  feed.py  match.py  social.py  tournament.py  track.py  user.py
backend/app/tests/: conftest.py  test_swiss_pairing.py
backend/app/workers/: tasks.py
frontend/: Dockerfile  Dockerfile.dev  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  manifest.webmanifest  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/auth/: auth.guard.ts  auth.service.ts  jwt.interceptor.ts
frontend/src/app/core/services/: api.service.ts
frontend/src/app/core/store/: auth.store.ts  player.store.ts
frontend/src/app/features/battles/: battle-view.component.ts
frontend/src/app/features/feed/: feed.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+17 files in other folders)
